#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT(
  [HscdSupport Devel Branch], [0.8],
  [joachim.falk@informatik.uni-erlangen.de christian.zebelein@informatik.uni-erlangen.de],
  [HscdSupport--devel-])

AC_PREREQ(2.57)
ACJF_INIT

AC_CONFIG_SRCDIR([RefCountObject.cpp])
AC_CONFIG_AUX_DIR([../BuildSystem])

AC_CANONICAL_BUILD
AC_CANONICAL_HOST

dnl Checks for programs.
ACJF_CHECK_CROSSTOOL([CC], [gcc])
ACJF_CHECK_CROSSTOOL([CXX], [c++])
ACJF_CHECK_CROSSTOOL([AR], [ar])
ACJF_CHECK_CROSSTOOL([RANLIB], [ranlib])
ACJF_CHECK_CROSSTOOL([NM], [nm])
AC_PROG_CXXCPP
AC_PROG_CPP
# Checks for programs.
#AC_PROG_LIBTOOL
#AC_PROG_INSTALL
#AC_PROG_LN_S
#AC_PROG_MAKE_SET

AC_DISABLE_SHARED
AC_PROG_LIBTOOL

AM_INIT_AUTOMAKE

ACJF_ARG_DEBUG([yes], [], [-DNDEBUG])
if test x"$enable_debug" = x"yes"; then
  AC_DEFINE([COSUPPORT_ENABLE_DEBUG], [yes], [Defined if debug support is enabled])
fi

AC_CONFIG_HEADER([config.h pkginclude/CoSupport/cosupport_config.h])

DX_HTML_FEATURE(ON)
DX_CHM_FEATURE(OFF)
DX_CHI_FEATURE(OFF)
DX_MAN_FEATURE(ON)
DX_RTF_FEATURE(OFF)
DX_XML_FEATURE(OFF)
DX_PDF_FEATURE(ON)
DX_PS_FEATURE(OFF)
DX_INIT_DOXYGEN([HscdSupport--devel], [doxygen.cfg], [doxygen-doc])

dnl check for exe extension
AC_EXEEXT

# Checks for header files.
# AC_FUNC_ALLOCA
# AC_HEADER_STDC
# AC_CHECK_HEADERS([OS.h fcntl.h limits.h mach/mach.h malloc.h stddef.h stdint.h stdlib.h string.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
ACJF_CHECK_TYPE([long long])
ACJF_TYPE_SIZE_T
ACJF_CHECK_STDINT
ACJF_CHECK_VA_COPY

# Checks for libraries.

# This is a hard requirement.
ACJF_CHECK_LIB_BOOST

ACJF_CHECK_LIB_SYSTEMC(
  [acjf_cosupport_found_pkg_systemc="yes";],
  [acjf_cosupport_found_pkg_systemc="no";])

AM_CONDITIONAL([COSUPPORT_ENABLE_SYSTEMC], [test x"$acjf_cosupport_found_pkg_systemc" = x"yes"])
# This is a define for pkginclude/CoSupport/cosupport_config.h to guarantee
# consistency for Examples and Testcases
if test x"$acjf_cosupport_found_pkg_systemc" = x"yes"; then
  AC_DEFINE([COSUPPORT_ENABLE_SYSTEMC], [yes], [Defined if SystemC support is enabled])
fi

ACJF_CHECK_LIB_XERCES(
  [acjf_cosupport_found_pkg_xerces="yes";],
  [acjf_cosupport_found_pkg_xerces="no";])

AM_CONDITIONAL([COSUPPORT_ENABLE_XERCES], [test x"$acjf_cosupport_found_pkg_xerces" = x"yes"])
# This is a define for pkginclude/CoSupport/cosupport_config.h to guarantee
# consistency for Examples and Testcases
if test x"$acjf_cosupport_found_pkg_systemc" = x"yes"; then
  AC_DEFINE([COSUPPORT_ENABLE_XERCES], [yes], [Defined if xerces support is enabled])
fi

ACJF_CHECK_LIB_XALAN(
  [acjf_cosupport_found_pkg_xalan="yes";],
  [acjf_cosupport_found_pkg_xalan="no";])

AM_CONDITIONAL([COSUPPORT_ENABLE_XALAN], [test x"$acjf_cosupport_found_pkg_xalan" = x"yes"])
# This is a define for pkginclude/CoSupport/cosupport_config.h to guarantee
# consistency for Examples and Testcases
if test x"$acjf_cosupport_found_pkg_systemc" = x"yes"; then
  AC_DEFINE([COSUPPORT_ENABLE_XALAN], [yes], [Defined if xalan support is enabled])
fi

SUBDIRS="$subdirs"
AC_SUBST(SUBDIRS)

AC_CONFIG_FILES([
  Makefile
  pkginclude/Makefile
])

ACJF_DONE

AC_OUTPUT([autovars.sh])
