## Process this file with automake to produce Makefile.in
# vim: set noet sw=2 ts=8 sts=0:
#
# Copyright (C) Joachim Falk <joachim.falk@gmx.de> $Date: 2003/01/15 16:43:20 $
#
# Makefile.am is part of the jflib distribution of Joachim Falk;
# you can redistribute it and/or modify it under the terms of the
# GNU General Public License as published by the Free Software Foundation;
# either version 2 of the License, or (at your option) any later version.
#
# The jflib distributio is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public
# License along with this program; If not, write to
# the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
# Boston, MA 02111-1307, USA.
#
# $Log$

include $(auxdir)/jfrules.mk

SUBDIRS=

nobase_include_HEADERS = \
	CoSupport/Streams/HexOutput.hpp \
	CoSupport/Streams/AlternateStream.hpp \
	CoSupport/Streams/stl_output_for_list.hpp \
	CoSupport/Streams/DebugOStream.hpp \
	CoSupport/Streams/stl_output_for_pair.hpp \
	CoSupport/Streams/stl_output_for_vector.hpp \
	CoSupport/Streams/iterator_dump.hpp \
	CoSupport/Streams/FilterStreambuf.hpp \
	CoSupport/Streams/LineNumberStreambuf.hpp \
	CoSupport/Streams/HeaderFooterStreambuf.hpp \
	CoSupport/Streams/ColorStreambuf.hpp \
	CoSupport/Streams/IndentStreambuf.hpp \
	CoSupport/Streams/DebugStreambuf.hpp \
	CoSupport/Streams/NullStreambuf.hpp \
	CoSupport/Streams/FilterOStream.hpp \
	CoSupport/Initializer/BasicInitializer.hpp \
	CoSupport/String/convert.hpp \
	CoSupport/String/TypeName.hpp \
	CoSupport/String/Concat.hpp \
	CoSupport/XML/xalan_support.hpp \
	CoSupport/XML/xerces_support.hpp \
	CoSupport/SMXIdManager.hpp \
	CoSupport/sassert.h \
	CoSupport/commondefs.h \
	CoSupport/SmartPtr/shared_copyonwrite_ptr.hpp \
	CoSupport/SmartPtr/intrusive_copyonwrite_ptr.hpp \
	CoSupport/SmartPtr/intrusive_refcount_ptr.hpp \
	CoSupport/SmartPtr/RefCount.hpp \
	CoSupport/SmartPtr/RefCountObject.hpp \
	CoSupport/SystemC/systemc_support.hpp \
	CoSupport/SystemC/par_manager.hpp \
	CoSupport/SystemC/PerformanceEvaluation.hpp \
	CoSupport/SystemC/ChannelModificationListener.hpp \
	CoSupport/DataTypes/ValidWrapper.hpp \
	CoSupport/DataTypes/CheckedVector.hpp \
	CoSupport/DataTypes/bit_buffer.hpp \
	CoSupport/DataTypes/container_insert.hpp \
	CoSupport/DataTypes/ListFacade.hpp \
	CoSupport/DataTypes/oneof.hpp \
	CoSupport/DataTypes/ArrayFifo.hpp \
	CoSupport/DataTypes/Facade.hpp \
	CoSupport/Math/modulo_arith.hpp \
	CoSupport/Math/smoc_math.hpp \
	CoSupport/Math/string_hash.hpp \
	CoSupport/Type/transform.hpp \
	CoSupport/Lambda/functor.hpp \
	CoSupport/Lambda/function_objects.hpp
